# potloc-bi-test

./: .gitignore  README.md  pyproject.toml
code/: export_duckdb.py  import_data.py  show_table_headers.py  show_tables.py  split_files.py  weather.py
data/: bixi_stations.csv  montreal_weather_2025_Jan_May.csv
dbt_project/: dbt_project.yml
dbt_project/.dbt/: profiles.yml
dbt_project/models/: mart_bixi_daily.sql  mart_bixi_usage.sql  schema.yml  stg_bixi_stations.sql  stg_bixi_trips.sql
